2nd feature test for read about pol passed

--- a/app/views/pols/show.html.erb
+++ b/app/views/pols/show.html.erb
@@ -1,6 +1,4 @@
-<head>
-<h1><% @pol.do |pol| %></h1>
-<%= pol.congressman %>
-<%= pol.party %>
-<% end %>
-</head>
+<article>
+  <h1><%= @pol.congressman %></h1>
+  <h2><%= @pol.party %></h2>
+</article>
