--- a/app/views/pols/index.html.erb
+++ b/app/views/pols/index.html.erb
@@ -1,1 +1,20 @@
-Pols view
+<h1>Boston Congressman</h1>
+
+<table>
+  <thead>
+    <tr>
+      <th>Congressman</th>
+      <th>party</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @pols.each do |pol| %>
+      <tr>
+        <td><%= pol.congressman %></td>
+        <td><%= pol.party %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
