--- a/app/views/votes/index.html.erb
+++ b/app/views/votes/index.html.erb
@@ -1,1 +1,7 @@
 Votes
+<select name="Issue">
+  <option value="">Please select issue</option>
+  <option value="2">Environment</option>
+  <option value="3">Health</option>
+  <option value="3">Taxes</option>
+</select>
