--- a/app/views/districts/index.html.erb
+++ b/app/views/districts/index.html.erb
@@ -1,7 +1,17 @@
-<h1>Districts</h1>
-<%= form_tag(districts_path, :method => "get", id: "search-form") do %>
-<%= text_field_tag :search, params[:search], placeholder: "Search Zips" %>
-<%= submit_tag "Search"  %>
+<h1>Please enter zip code and select issue</h1>
+<%= form_tag search_path, method: :get do %>
+<%= text_field_tag 'keyword', nil %>
+<% end %>
+
+
+<select name="Issue">
+  <option value="">Please select issue</option>
+  <option value="2">Environment</option>
+  <option value="3">Health</option>
+  <option value="3">Taxes</option>
+</select>
+
+<%= submit_tag "Search" %>
 
 <% if @districts.present? %>
     <% @districts.each do |dis| %>
@@ -13,4 +23,4 @@
   <% else %>
     <p> No Zip Located</p>
 <% end %>
-<% end %>
+
